@@ -11,7 +11,7 @@
   should have those fields in readonly mode.
   -->
 
-  <!-- login/id info -->
+ <!-- login/id info -->
  <field name="uid" meta_type="CPS String Field">
   <property name="acl_write_roles">Manager; EntryManager; Owner</property>
   <property name="acl_write_expr"
@@ -19,6 +19,12 @@
  </field>
  <field name="userPassword" meta_type="CPS Password Field">
   <property name="acl_write_roles">Manager; EntryManager; Owner</property>
+  <property name="acl_write_expr"
+    >python:not datamodel.get('readonly_entry', False)</property>
+ </field>
+ <field name="confirm" meta_type="CPS Password Field">
+  <property name="read_ignore_storage">True</property>
+  <property name="write_ignore_storage">True</property>
   <property name="acl_write_expr"
     >python:not datamodel.get('readonly_entry', False)</property>
  </field>
